--- a/tests/player/Makefile.in
+++ b/tests/player/Makefile.in
@@ -91,7 +91,7 @@ CFLAGS = @OOH323CFLAGS@
 noinst_PROGRAMS = ooPlayer
 ooPlayer_SOURCES = ooPlayer.c ooPlayer.h oosndrtp.c oosndrtp.h
 INCLUDES = -I$(top_builddir)/src -I$(top_builddir)/src/h323
-ooPlayer_LDADD = -loostk -ldl -lpthread
+ooPlayer_LDADD = -looh323c -ldl -lpthread
 ooPlayer_LDFLAGS = -L$(top_builddir)/src
 
 EXTRA_DIST = ooPlayer.dsp space.raw states.wav space.wav
