--- a/tests/simple/Makefile.in
+++ b/tests/simple/Makefile.in
@@ -90,7 +90,7 @@ CFLAGS = @OOH323CFLAGS@
 noinst_PROGRAMS = simple
 simple_SOURCES = simple.c oosndrtp.c oosndrtp.h
 INCLUDES = -I$(top_builddir)/src -I$(top_builddir)/src/h323
-simple_LDADD = -loostk -ldl -lpthread
+simple_LDADD = -looh323c -ldl -lpthread
 simple_LDFLAGS = -L$(top_builddir)/src
 
 EXTRA_DIST = simple.dsp
