Updated build process to handle issues on FreeBSD

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,14 +1,14 @@
 AUTOMAKE_OPTIONS = gnu
-
+CFLAGS=@OOH323CFLAGS@
 
 opt:
-        $(MAKE) "CFLAGS = -DGNU -D_GNU_SOURCE -D_REENTRANT -D_COMPACT -O2" all
+        $(MAKE) "CFLAGS = $(CFLAGS) -O2 -D_COMPACT" all
 
 debug:
-        $(MAKE) "CFLAGS = -g -DGNU -D_GNU_SOURCE -D_REENTRANT" all
+        $(MAKE) "CFLAGS = $(CFLAGS) -g" all
 
 profile:
-        $(MAKE) "CFLAGS = -g -pg -DGNU -D_GNU_SOURCE -D_REENTRANT" all
+        $(MAKE) "CFLAGS = $(CFLAGS) -g -pg" all
 
-SUBDIRS = . src media tests
+SUBDIRS = . src @OOMEDIADIR@ tests
 EXTRA_DIST = doc ooh323c.dsw
