--- a/media/Makefile.in
+++ b/media/Makefile.in
@@ -79,6 +79,8 @@ LN_S = @LN_S@
 OBJDUMP = @OBJDUMP@
 OOH323CDIR = @OOH323CDIR@
 OOH323CFLAGS = @OOH323CFLAGS@
+OOMEDIADIR = @OOMEDIADIR@
+OOTESTSDIRS = @OOTESTSDIRS@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
 STRIP = @STRIP@
