--- a/tests/player/Makefile.am
+++ b/tests/player/Makefile.am
@@ -7,9 +7,9 @@ ooPlayer_LDADD = -looh323c -ldl -lpthread
 ooPlayer_LDFLAGS = -L$(top_builddir)/src
 
 opt:
-        $(MAKE) "CFLAGS = -DGNU -D_GNU_SOURCE -D_REENTRANT -D_COMPACT -O2" all
+        $(MAKE) all
 
 debug:
-        $(MAKE) "CFLAGS = -g -DGNU -D_GNU_SOURCE -D_REENTRANT" all
+        $(MAKE) all
 
 EXTRA_DIST = ooPlayer.dsp space.raw states.wav space.wav
