--- a/tests/receiver/Makefile.am
+++ b/tests/receiver/Makefile.am
@@ -6,9 +6,9 @@ ooReceiver_LDADD = -looh323c -ldl -lpthread
 ooReceiver_LDFLAGS = -L$(top_builddir)/src
 
 opt:
-        $(MAKE) "CFLAGS = -DGNU -D_GNU_SOURCE -D_REENTRANT -D_COMPACT -O2" all
+        $(MAKE) all
 
 debug:
-        $(MAKE) "CFLAGS = -g -DGNU -D_GNU_SOURCE -D_REENTRANT" all
+        $(MAKE) all
 
 EXTRA_DIST = ooReceiver.dsp
