--- a/configure.in
+++ b/configure.in
@@ -20,7 +20,7 @@ fi
 
 
 AC_SUBST(INSTALLPREFIX)
-OOH323CFLAGS="-DGNU -D_GNU_SOURCE -D_REENTRANT"
+OOH323CFLAGS="-DGNU -D_GNU_SOURCE -D_REENTRANT -DUSE_THREADS"
 AC_SUBST(OOH323CFLAGS)
 
 
