--- a/tests/receiver/Makefile.am
+++ b/tests/receiver/Makefile.am
@@ -1,4 +1,4 @@
-CFLAGS = @OOH323CFLAGS@
+AM_CFLAGS = @OOH323CFLAGS@
 noinst_PROGRAMS = ooReceiver
 ooReceiver_SOURCES = ooReceiver.c ooReceiver.h oosndrtp.h oosndrtp.c
 INCLUDES = -I$(top_builddir)/src -I$(top_builddir)/src/h323
