--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 AC_PREREQ(2.57)
-AC_INIT([OOH323C],[0.8.4],[Objective Systems <support@obj-sys.com>],[ooh323c])
+AC_INIT([OOH323C],[0.9.0],[Objective Systems <support@obj-sys.com>],[ooh323c])
 PACKAGE=ooh323c
-VERSION=0.8.4
+VERSION=0.9.0
 
 AC_CONFIG_AUX_DIR(config)
 AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
@@ -25,10 +25,9 @@ AC_SUBST(OOH323CFLAGS)
 
 
 AC_PROG_CC
-AC_PROG_LIBTOOL
+AC_PROG_RANLIB
 AC_LANG_C
 
-dnl not required as using libtool AC_PROG_RANLIB
 AC_HEADER_STDC
 AC_CHECK_HEADERS([pthread.h arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h stddef.h stdlib.h string.h sys/socket.h unistd.h sys/ioctl.h malloc.h])
 
